# MultiRichPresence

./: Cargo.toml  README.md  build.rs  setup.bat  setup.sh
src/: main.rs
