[package]
name = "MultiRichPresence"
version = "0.1.0"
edition = "2021"
author = "404ConnerNotFound

[dependencies]
# Discord RPC
discord-rich-presence = "0.2"

# GUI
egui = "0.27"
eframe = { version = "0.27", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "glow",
    "persistence",
] }

# System monitoring
sysinfo = "0.30"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Text filtering
regex = "1.0"

# Logging
log = "0.4"
env_logger = "0.11"

# Cross-platform
directories = "5.0"

# Process monitoring
sysinfo = "0.30"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "processthreadsapi"] }